--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="./css/scroolbar.css">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/estilo.css">
+    <link href="https://tiduspedro.github.io/meuhub/styles.css" rel="stylesheet">
+    <link href="https://tiduspedro.github.io/meuhub/scrollbar.css" rel="stylesheet">
 </head>
 <body>
     <a href="#">
