--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
             </li>
         </ul>
         <h2 class="titulo">Informações sobre mim</h2>
-        <p class="informacoes">Olá, me chamo Pedro, tenho 20 anos e sou um front end, estudo HTML, CSS e JS a 2 meses, estou criando projetos simples como esse hub, me esforço bastante para aprender, tento sempre criar codigos limpos e faceis de entender, se voce quiser, você pode entrar em contato comigo pelo meu instagram e E-mail responderei o mais rapido possivel. </p>
-    </main>
+        <p class="informacoes">Olá, me chamo Pedro, tenho 20 anos e sou um front end, estudo HTML, CSS e JS há 2 meses, estou criando projetos simples como esse hub, me esforço bastante para aprender, tento sempre criar códigos limpos e fáceis de entender, se você quiser, você pode entrar em contato comigo pelo meu instagram e E-mail (pedroparente.ofc.@gmail.com) responderei o mais rapido possível. </p>
     
 </body>
 </html>
