--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p class="informacoes">Aqui você vai encontrar links para meu portifolio e meu instagram.</p>
         <ul>
             <li>
-                <a href="https://github.com/TidusPedro" class="github" target="_blank">Github</a>
+                <a href="https://github.com/TidusPedro" class="githu" target="_blank">Github</a>
             </li>
             <li>
                 <a href="https://www.linkedin.com/in/pedro-parente-905014279" class="linke" target="_blank">Linkedin</a>
